--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Arimo:wght@400;500;600;700&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* font-family: 'Arimo', sans-serif; */
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box !important;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    font-family: 'Arimo', sans-serif !important; 
 }
+.home{
+  /* margin-bottom: 0 !important;
+  padding-bottom: 0 !important; */
+  /* padding: 0;
+  margin: 0; */
+  /* background: darkgoldenrod !important; */
+}
+/* footer{
+  background: sandybrown;
+}
+.contact{
+  /* background: saddlebrown; */
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* 
+  primaryColor:#1A1A1A;
+  secondaryColor:#4D4D4D;
+  elementcolor:#536198;
+*/
